# backtrader_cpp

./: .gitignore  BUILD_ANALYSIS_REPORT.md  BUILD_FIXES_APPLIED.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CMakeLists_debug.txt  CMakeLists_manual.txt  README.md  SMA_TEST_REPORT.md  build.sh  build_output.txt  build_tests.sh  debug_test.cpp  diagnose.cpp  fixed_build.sh  manual_build.sh  manual_test.cpp  precision_test.cpp  precision_test_sma  precision_test_sma.cpp  run_build.py  run_tests.sh  simple_cmake_test.txt  simple_makefile  simple_phase3_test.cpp  standalone_phase3_test  standalone_phase3_test.cpp  test_actual_sma  test_actual_sma.cpp  test_all_indicators.cpp  test_simple_indicators.cpp  test_sma_debug  test_sma_debug.cpp  verify_implementation  verify_implementation.cpp  verify_phase2  verify_phase2.cpp  verify_phase3.cpp
examples/: CMakeLists.txt  simple_sma_strategy.cpp
python/: CMakeLists.txt  __init__.py  test_bindings.py  utils.py
python/bindings/: core_bindings.cpp  indicator_bindings.cpp  module.cpp
python_bindings/: ACHIEVEMENT_REPORT.md  CMakeLists.txt  CMakeLists_core.txt  CMakeLists_extended.txt  CMakeLists_minimal.txt  CMakeLists_simple.txt  CMakeLists_static.txt  CMakeLists_working.txt  COSMIC_80_FUNCTION_UNIVERSE_BOUNDARY.md  EPIC_MILESTONE_REPORT.md  EXTENDED_PROGRESS_REPORT.md  FINAL_BREAKTHROUGH_REPORT.md  FINAL_REPORT.md  FINAL_TEST_REPORT.md  INFINITE_95_FUNCTION_ULTIMATE_TRANSCENDENCE.md  LEGENDARY_70_FUNCTION_WORLD_RECORD.md  PYTHON_BINDINGS_SUMMARY.md  README.md  ULTIMATE_75_FUNCTION_NO_MANS_LAND.md  ULTIMATE_ACHIEVEMENT_REPORT.md  comprehensive_demo.py  comprehensive_validation_test.py  count_all_functions.py  data_loader.py  debug_checkpoints.py  demo_standalone.py  indicator_test_generator.py  pyproject.toml  setup.py  test_backtrader_fixed.py  test_beyond_infinite_100_functions.py  test_core_functionality.py  test_cosmic_80_functions.py  test_extended_functionality.py  test_individual_indicators.py  test_infinite_95_functions.py  test_minimal.py  test_module.py  test_multiversal_90_functions.py  test_suite.py  (+1 more)
python_bindings/backtrader_cpp/: __init__.py
python_bindings/examples/: simple_strategy_example.py
python_bindings/src/: _version.py  analyzer_bindings.cpp  backtrader_cpp_bindings.cpp  broker_bindings.cpp  cerebro_bindings.cpp  core_bindings.cpp  data_bindings.cpp  fixed_indicators.cpp  indicator_bindings.cpp  main.cpp  main_core.cpp  main_extended.cpp  main_extended_simple.cpp  main_minimal.cpp  main_simple.cpp  main_working.cpp  strategy_bindings.cpp  utils_bindings.cpp
python_bindings/tests/: conftest.py  run_all_tests.py  test_algorithm_verification.py  test_available_functions.py  test_backtrader_compatibility.py  test_backtrader_compatibility_complete.py  test_backtrader_compatible.py  test_backtrader_correct.py  test_backtrader_final.py  test_backtrader_sma_strategy.py  test_bt_compat.py  test_compatibility.py  test_complete_suite.py  test_core_infrastructure.py  test_fixed_indicators.py  test_galactic_85_functions.py  test_indicators.py  test_indicators_oo.py  test_legendary_70th.py  test_original_adapted.py  test_python_accdecosc.py  test_python_analyzer-sqn.py  test_python_analyzer-timereturn.py  test_python_aroonoscillator.py  test_python_aroonupdown.py  test_python_atr.py  test_python_awesomeoscillator.py  test_python_bbands.py  test_python_cci.py  test_python_comminfo.py  test_python_data_multiframe.py  test_python_data_replay.py  test_python_data_resample.py  test_python_dema.py  test_python_demaenvelope.py  test_python_demaosc.py  test_python_dm.py  test_python_dma.py  test_python_downmove.py  test_python_dpo.py  (+65 more)
src/: CMakeLists.txt  LineBuffer.cpp  LineIterator.cpp  LineOperations.cpp  LineRoot.cpp  LineSeries.cpp  MetaClass.cpp  analyzer.cpp  broker.cpp  cerebro.cpp  comminfo.cpp  dataseries.cpp  errors.cpp  feed.cpp  fillers.cpp  flt.cpp  functions.cpp  indicator.cpp  linebuffer.cpp  lineiterator.cpp  lineroot.cpp  lineseries.cpp  mathsupport.cpp  metabase.cpp  observer.cpp  order.cpp  position.cpp  resamplerfilter.cpp  signal.cpp  sizer.cpp  store.cpp  strategy.cpp  talib.cpp  timer.cpp  trade.cpp  tradingcal.cpp  version.cpp  writer.cpp
src/analyzers/: Analyzer.cpp  annualreturn.cpp  calmar.cpp  drawdown.cpp  leverage.cpp  logreturnsrolling.cpp  periodstats.cpp  positions.cpp  pyfolio.cpp  returns.cpp  sharpe.cpp  sharpe_ratio_stats.cpp  sqn.cpp  timereturn.cpp  total_value.cpp  tradeanalyzer.cpp  transactions.cpp  vwr.cpp
src/base/: LineBuffer.cpp  LineIterator.cpp  LineOperations.cpp  LineSeries.cpp  MetaClass.cpp
src/broker/: Order.cpp
src/brokers/: bbroker.cpp  ccxtbroker.cpp  ctpbroker.cpp  ibbroker.cpp  oandabroker.cpp  vcbroker.cpp
src/btrun/: btrun.cpp
src/commissions/: dc_commission.cpp
src/core/: LineRoot.cpp
src/data/: DataFeed.cpp
src/feeds/: CSVDataFeed.cpp  DataFeed.cpp  blaze.cpp  btcsv.cpp  ccxtfeed.cpp  chainer.cpp  csvgeneric.cpp  ctpdata.cpp  ibdata.cpp  influxfeed.cpp  mt4csv.cpp  oanda.cpp  pandafeed.cpp  quandl.cpp  rollover.cpp  sierrachart.cpp  vcdata.cpp  vchart.cpp  vchartcsv.cpp  yahoo.cpp
src/filters/: bsplitter.cpp  calendardays.cpp  datafiller.cpp  datafilter.cpp  daysteps.cpp  heikinashi.cpp  renko.cpp  session.cpp
src/indicators/: ADX.cpp  ATR.cpp  Aroon.cpp  BollingerBands.cpp  CCI.cpp  CrossOver.cpp  DEMA.cpp  EMA.cpp  Ichimoku.cpp  IndicatorBase.cpp  KAMA.cpp  MACD.cpp  MFI.cpp  Momentum.cpp  OBV.cpp  ParabolicSAR.cpp  ROC.cpp  RSI.cpp  SMA.cpp  Stochastic.cpp  TEMA.cpp  TRIX.cpp  TSI.cpp  UltimateOscillator.cpp  WMA.cpp  WilliamsR.cpp  accdecoscillator.cpp  accdecoscillator.cpp.backup  accdecoscillator_debug.cpp  accdecoscillator_new.cpp  aroon.cpp  atr.cpp  awesomeoscillator.cpp  basicops.cpp  bollinger.cpp  cci.cpp  closeline.cpp  crossover.cpp  dema.cpp  demaosc.cpp  (+67 more)
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  simple_test.cpp  test_config.h.in  test_data_feed.cpp  test_framework.h  test_indicators.cpp  test_integration.cpp  test_metaclass.cpp  test_performance.cpp  test_strategy.cpp  test_stress.cpp
(+625 files in other folders)
